added href to index.html and renamed sim example page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">MplusAutomation</h1>
-      <h2 class="project-tagline">The MplusAutomation package leverages the flexibility of the R language to automate latent variable model estimation and interpretation using Mplus, a powerful latent variable modeling program developed by Muthen and Muthen (www.statmodel.com). Specifically, MplusAutomation provides routines for creating related groups of models, running batches of models, and extracting and tabulating model parameters and fit statistics.</h2>
+      <h2 class="project-tagline">The MplusAutomation package
+      leverages the flexibility of the R language to automate latent
+      variable model estimation and interpretation using Mplus, a
+      powerful latent variable modeling program developed by Muthen
+      and Muthen (<a href =
+      "www.statmodel.com">www.statmodel.com</a>). Specifically,
+      MplusAutomation provides routines for creating related groups of
+      models, running  batches of models, and extracting and
+      tabulating model parameters and fit statistics.</h2> 
       <a href="https://github.com/michaelhallquist/MplusAutomation" class="btn">View on GitHub</a>
       <a href="https://github.com/michaelhallquist/MplusAutomation/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/michaelhallquist/MplusAutomation/tarball/master" class="btn">Download .tar.gz</a>
